--- a/Network/Network.ini
+++ b/Network/Network.ini
@@ -64,19 +64,30 @@ NetInSpeed=#maxDownload#
 Measure=NetOut
 NetOutSpeed=#maxUpload#
 
-[measurePing]
+;[measurePing]
+;Measure=Plugin
+;Plugin=PingPlugin
+;UpdateRate=1
+;DestAddress=www.google.co.uk
+;TimeoutValue=5000
+
+;IfAboveValue=49
+;IfAboveAction=[!SetOption meterPingValue FontColor 255,165,0,205][!Redraw]
+
+;IfBelowValue=50
+;IfBelowAction=[!SetOption meterPingValue FontColor 0,255,0,205][!Redraw]
+
+[measureServerPing]
 Measure=Plugin
 Plugin=PingPlugin
 UpdateRate=1
-DestAddress=www.google.co.uk
-TimeoutValue=5000
+DestAddress=192.168.1.10
+TimeoutValue=3000
 
-IfAboveValue=49
-IfAboveAction=[!SetOption meterPingValue FontColor 255,165,0,205][!Redraw]
-
-IfBelowValue=50
-IfBelowAction=[!SetOption meterPingValue FontColor 0,255,0,205][!Redraw]
-
+IfCondition=measureServerPing < 500
+IfTrueAction=[!SetOption meterServerValue FontColor 0,255,0,205][!SetOption meterServerValue Text "Online"]
+IfFalseAction=[!SetOption meterServerValue FontColor 255,0,0,205][!SetOption meterServerValue Text "Offline"]
+OnUpdateAction=[!UpdateMeter meterServerValue][!Redraw]
 
 [measureNetInTotal]
 Measure=NetIn
@@ -272,6 +283,31 @@ MeterStyle=styleBar
 MeasureName=measureNetIn
 X=10
 Y=112
+W=190
+H=1
+
+[meterServerLabel]
+Meter=String
+MeterStyle=styleLeftText
+X=10
+Y=120
+W=190
+H=14
+Text=Server Status
+
+[meterServerValue]
+Meter=String
+MeterStyle=styleRightText
+X=200
+Y=0r
+W=190
+H=14
+
+[meterSeperator3]
+Meter=Image
+MeterStyle=styleSeperator
+X=10
+Y=132
 W=190
 H=1
 
