--- a/RSS2/ReaderRSS.ini
+++ b/RSS2/ReaderRSS.ini
@@ -20,8 +20,8 @@ Preview=
 [Variables]
 Width=400
 WidthT=350
-RSS1=http://feeds.bbci.co.uk/news/technology/rss.xml
-RSS1title=BBC Tech
+RSS1=https://blog.acolyer.org/feed/
+RSS1title=Morning Paper
 FontSize=8
 Color1=255,255,255,220
 Color2=255,205,50,255
