--- a/RSS3/ReaderRSS.ini
+++ b/RSS3/ReaderRSS.ini
@@ -21,7 +21,7 @@ Preview=
 Width=400
 WidthT=350
 RSS1=https://karpathy.github.io/feed.xml
-RSS1title=Andrej Karpathy
+RSS1title=Embedded in Academia
 FontSize=8
 Color1=255,255,255,220
 Color2=255,205,50,255
