--- a/System/System.ini
+++ b/System/System.ini
@@ -34,6 +34,13 @@ colorText=255,255,255,205
 Measure=CPU
 Processor=0
 
+[measureGPU]
+Measure=Plugin
+Plugin=MSIAfterburner.dll
+DataSource=GPU usage
+MinValue=0
+MaxValue=100
+
 [measureRAM]
 ; Returns the amount of RAM used in bytes.
 Measure=PhysicalMemory
@@ -56,9 +63,9 @@ PerfMonInstance=""
 PerfMonDifference=0
 
 [MeasureTopProcess]
-Measure=Plugin 
-Plugin=Plugins\AdvancedCPU.dll 
-TopProcess=2 
+Measure=Plugin
+Plugin=Plugins\AdvancedCPU.dll
+TopProcess=2
 CPUExclude=Idle
 
 [MeasureUptime]
@@ -163,11 +170,42 @@ Y=52
 W=190
 H=1
 
-[meterLabelRAM]
+[meterLabelGPU]
 Meter=String
 MeterStyle=styleLeftText
 X=10
 Y=60
+W=190
+H=14
+Text=GPU Usage
+
+[meterValueGPU]
+Meter=String
+MeterStyle=styleRightText
+MeasureName=measureGPU
+X=200
+Y=0r
+; r stands for relative. In this case, the Y position of meterValueCPU is 0 pixels
+; below the Y value of the previous meter (i.e it's the same as in meterLabelCPU).
+W=190
+H=14
+Text=%1%
+; %1 stands for the value of MeasureName (measureGPU in this case).
+
+[meterBarGPU]
+Meter=Bar
+MeterStyle=styleBar
+MeasureName=measureGPU
+X=10
+Y=72
+W=190
+H=1
+
+[meterLabelRAM]
+Meter=String
+MeterStyle=styleLeftText
+X=10
+Y=80
 W=190
 H=14
 Text=RAM Usage
@@ -190,7 +228,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=measureRAM
 X=10
-Y=72
+Y=92
 W=190
 H=1
 
@@ -198,7 +236,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=80
+Y=100
 W=190
 H=14
 Text=SWAP Usage
@@ -219,7 +257,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=measureSWAP
 X=10
-Y=92
+Y=112
 W=190
 H=1
 
@@ -227,7 +265,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=100
+Y=120
 W=190
 H=14
 Text=Processes
@@ -245,7 +283,7 @@ H=14
 Meter=Bar
 MeterStyle=styleBar
 X=10
-Y=112
+Y=132
 W=190
 H=1
 
@@ -253,7 +291,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=120
+Y=140
 W=190
 H=14
 Text=Top Process
@@ -271,7 +309,7 @@ H=14
 Meter=Bar
 MeterStyle=styleBar
 X=10
-Y=132
+Y=152
 W=190
 H=1
 
@@ -279,7 +317,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=140
+Y=160
 W=190
 H=14
 Text=Uptime
@@ -297,6 +335,6 @@ H=14
 Meter=Bar
 MeterStyle=styleBar
 X=10
-Y=152
+Y=172
 W=190
 H=1
