--- a/Weather/weatherData.ini
+++ b/Weather/weatherData.ini
@@ -63,7 +63,7 @@ pressureUnit=mb
 Measure=Plugin
 Plugin=WebParser
 UpdateRate=1800
-URL=https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20 %20%3D%2034503&format=xml&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys
+URL=https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20%3D%2034503&format=xml&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys
 RegExp="(?siU).*chill="(.*)" direction="(.*)" speed="(.*)".*humidity="(.*)" pressure="(.*)" rising="(.*)" visibility="(.*)".*sunrise="(.*)" sunset="(.*)".*wgs84_pos#">(.*)<.*wgs84_pos#">(.*)<.*temp="(.*)" text="(.*)".*high="(.*)" low="(.*)""
 Debug=2
 
